--- a/front/pubspec.yaml
+++ b/front/pubspec.yaml
@@ -37,12 +37,17 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
+  uuid: ^3.0.6
   flutter_heatmap_calendar: ^1.0.5
   shared_preferences: ^2.1.0
   flutter_svg: ^2.0.4
   google_fonts: ^4.0.3
   http: ^0.13.5
   flutter_dotenv: ^5.0.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  build_runner: ^2.3.3
+  hive_generator: ^2.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
