--- a/front/pubspec.yaml
+++ b/front/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   dotted_border: ^2.0.0+3
   flutter_ui_toolkit: ^0.0.3+9
   intl: ^0.17.0
+  fluttertoast: ^8.0.8
 
 
   # The following adds the Cupertino Icons font to your application.
