--- a/front/pubspec.yaml
+++ b/front/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   hive_flutter: ^1.1.0
   build_runner: ^2.3.3
   hive_generator: ^2.0.0
+  intro_slider: ^4.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
