--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "nodemon --quiet test.js",
-    "start": "nodemon --quiet index.js"
+    "start": "node --quiet index.js"
   },
   "type": "module"
 }
