changing nodmon to node

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "test": "nodemon --quiet test.js",
-    "start": "node --quiet index.js"
+    "start": "node  index.js"
   },
   "type": "module"
 }
+
