--- a/front/pubspec.yaml
+++ b/front/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_ui_toolkit: ^0.0.3+9
   intl: ^0.17.0
   fluttertoast: ^8.0.8
+  flutter_easyloading: ^3.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
